--- a/style/index.css
+++ b/style/index.css
@@ -108,10 +108,10 @@ a{
     flex-flow: row;
     border:1px solid black;
     margin:50px;
-    width:40%;
+    width:90%;
 }
 .me img{
-    width:300px;
+    width:500px;
     border-radius:30px;
 }
 h2{
@@ -120,23 +120,45 @@ h2{
 .columnizeMe{
     display:flex;
     flex-flow:column wrap;
-    border:1px solid black;
-    padding-left:10%;
+    border:1px dashed black;
+    padding-left:5%;
     justify-content:space-evenly;
+}
+.columnizeMe p{
+    width:60%;
+}
+.columnizeMe .navText{
+    margin-left:20%;
+    padding: 2% 5% 2% 5%;
 }
 .gallery{
     display:flex;
-    width:100%;
-    padding-left:10%;
-    padding-bottom:3%;
     flex-flow:row wrap;
     justify-content:center;
     justify-content:space-evenly;
     align-items:center;
 }
 .image{
-    background:url(https://picsum.photos/300);
+    display:flex;
+    background:url(https://picsum.photos/350);
     background-repeat:no-repeat;
-    width:300px;
+    width:350px;
     height:30vh;
+    margin:2%;
+    margin-bottom:4%;
+    align-items:flex-end;
+    text-shadow: 2px 2px white;
+    font-size:3rem;
+    transition:.3s;
+    box-sizing:border-box;
+}
+.image a{
+    color:purple;
+}
+.image:hover{
+    cursor:pointer;
+    border:5px solid black;
+}
+.image:hover a{
+    opacity:1;
 }
