--- a/style/index.css
+++ b/style/index.css
@@ -60,18 +60,16 @@ body{
     max-width:100%;
 }
 .mainHeader{
-    background-color:green;
+    background-color:teal;
     width:100%;
     height:15vh;
-    border: 1px solid black;
 }
 h1{
     font-size:4rem;
 }
 .navBar{
     display:flex;
-    border:1px solid black;
-    background:green;
+    background:teal;
     justify-content:flex-start;
     margin-top:20px;
     flex-flow: row wrap;
@@ -82,7 +80,7 @@ h1{
     width:25px;
     height:25px;
     padding:20px;
-    border:1px solid black;
+    border-radius:10px;
     justify-content:space-evenly;
     align-items:center;
     margin:10px;
@@ -90,8 +88,11 @@ h1{
     cursor:pointer;
     flex-flow: row wrap;
 }
+.navBar .navText{
+    width:10%;
+}
 .navText:hover{
-    background:gold;
+    background:gray;
 }
 .navText:hover a{
     opacity:1;
@@ -106,7 +107,6 @@ a{
     display:flex;
     justify-content:flex-start;
     flex-flow: row;
-    border:1px solid black;
     margin:50px;
     width:90%;
 }
@@ -120,7 +120,6 @@ h2{
 .columnizeMe{
     display:flex;
     flex-flow:column wrap;
-    border:1px dashed black;
     padding-left:5%;
     justify-content:space-evenly;
 }
@@ -128,8 +127,20 @@ h2{
     width:60%;
 }
 .columnizeMe .navText{
-    margin-left:20%;
-    padding: 2% 5% 2% 5%;
+    padding: 3% 10% 3% 10%;
+    background:peachpuff;
+    font-size:3rem;
+    width:350px;
+}
+.columnizeMe .navText:hover{
+    background:orange;
+    opacity:1;
+}
+.columnizeMe .navText:hover a{
+    color:black;
+}
+.columnizeMe a{
+    color:black;
 }
 .gallery{
     display:flex;
@@ -161,4 +172,37 @@ h2{
 }
 .image:hover a{
     opacity:1;
+}
+.checkmeout{
+    background:teal;
+    display:flex;
+    flex-flow:column wrap;
+    justify-content:center;
+    align-items:center;
+    padding-top:10px;
+}
+.checkmeout h2{
+    display:flex;
+    justify-content:center;
+    flex-flow:column wrap;
+    align-items:center;
+}
+.checkmeout .navText{
+    display:flex;
+    justify-content:center;
+    padding:2% 5% 2% 5%;
+    flex-flow:column wrap;
+    align-content:center;
+    background:peachpuff;
+}
+.checkmeout a{
+    display:flex;
+    font-size:2rem;
+    flex-flow:column;
+    justify-content:center wrap;
+    align-items:center;
+    width:200px;
+}
+.checkmeout .navText:hover a{
+    color:rgb(0, 255, 55);
 }
