huge update for responsive design

--- a/style/index.css
+++ b/style/index.css
@@ -55,62 +55,71 @@ table {
 
 
 /* Add CSS styling here */
+*{
+    box-sizing:border-box;
+    max-width:100%;
+}
+html{
+    font-size:62.5%;
+    }
 body{
     font-family:Arial, Helvetica, sans-serif;
-    max-width:100%;
+    font-size:1.6rem;
+    line-height:1.5;
+    color:#4F4F4F;
+}
+section{
+    padding-top:2%;
 }
 .mainHeader{
     background-color:teal;
     width:100%;
-    height:15vh;
+    border:5px solid grey;
 }
 h1{
-    font-size:4rem;
+    font-size:6rem;
+    color:white;
+    padding-left:2%;
 }
 .navBar{
     display:flex;
     background:teal;
     justify-content:flex-start;
-    margin-top:20px;
     flex-flow: row wrap;
 }
 .navText{
     background:white;
     display:flex;
-    width:25px;
-    height:25px;
-    padding:20px;
+    width:10%;
+    margin:2% 2%;
+    padding:2% 0;
     border-radius:10px;
-    justify-content:space-evenly;
+    justify-content:center;
     align-items:center;
-    margin:10px;
     transition:.3s;
     flex-flow: row wrap;
-}
-.navBar .navText{
-    width:10%;
 }
 .navText:hover{
     background:gray;
 }
 .navText:hover a{
+    color:white;
     opacity:1;
 }
-a{
+.navText a{
     text-decoration:none;
-    color:black;
-    opacity:.5;
+    color:#4F4F4F;
     transition:.3s;
 }
 .meBody{
     display:flex;
-    justify-content:flex-start;
+    justify-content:center;
+    align-content:center;
     flex-flow: row;
-    margin:50px;
+    padding-left:3%;
     width:90%;
 }
 .me img{
-    width:500px;
     border-radius:30px;
 }
 h2{
@@ -124,28 +133,30 @@ h2{
 }
 .columnizeMe p{
     width:60%;
+    padding-bottom:2%;
 }
 .columnizeMe .navText{
-    padding: 3% 10% 3% 10%;
-    background:peachpuff;
-    font-size:3rem;
-    width:350px;
+    background:white;
+    border:1px solid #4F4F4F;
+    font-size:2rem;
+    justify-content:center;
+    align-items:center;
+    width:35%;
 }
 .columnizeMe .navText:hover{
-    background:orange;
+    background:gray;
     opacity:1;
 }
 .columnizeMe .navText:hover a{
-    color:black;
+    color: white;
 }
 .columnizeMe a{
-    color:black;
+    color:#4F4F4F;
 }
 .gallery{
     display:flex;
     flex-flow:row wrap;
     justify-content:center;
-    justify-content:space-evenly;
     align-items:center;
 }
 .image{
@@ -157,16 +168,19 @@ h2{
     margin:2%;
     margin-bottom:4%;
     align-items:flex-end;
-    text-shadow: 2px 2px white;
+    text-shadow: 3px 3px black;
     font-size:3rem;
     transition:.3s;
     box-sizing:border-box;
+    border-radius:30px;
 }
 .image a{
-    color:purple;
+    color:white;
+    display:inline-block;
+    padding:3% 5%;
 }
 .image:hover{
-    border:5px solid black;
+    border:7px solid blue;
 }
 .image:hover a{
     opacity:1;
@@ -184,23 +198,85 @@ h2{
     justify-content:center;
     flex-flow:column wrap;
     align-items:center;
+    color:white;
 }
 .checkmeout .navText{
     display:flex;
     justify-content:center;
-    padding:2% 5% 2% 5%;
-    flex-flow:column wrap;
     align-content:center;
-    background:peachpuff;
+    background:white;
 }
 .checkmeout a{
     display:flex;
     font-size:2rem;
     flex-flow:column;
-    justify-content:center wrap;
-    align-items:center;
-    width:200px;
+}
+.checkmeout .navText:hover{
+    background:grey;
 }
 .checkmeout .navText:hover a{
-    color:rgb(0, 255, 55);
+    color:white;
+}
+
+/*Media Queries below*/
+
+/*Tablet View*/
+@media (max-width:800px){
+    .mainHeader h1{
+        width:100%;
+        font-size:5rem;
+    }
+    .me{
+        width:250%;
+    }
+    .meBody p{
+        width:100%;
+    }
+    .checkmeout{
+        height:20vh;
+        display:flex;
+        flex-flow:row nowrap;
+    }
+    .checkmeout .navText{
+        background:white;
+        font-size:2rem;
+        padding:1%;
+        justify-content:center;
+        align-items:center;
+        width:15%;
+    }
+}
+/*End Tablet View*/
+
+
+/* Mobile View */
+@media (max-width:500px){
+    .mainHeader h1{
+        font-size:3rem;
+        padding-top:1%;
+    }
+    .navBar{
+        flex-direction:column;
+        justify-content: center;
+        align-items: center;
+        padding-bottom:1%;
+    }
+    .navText{
+        padding: 3% 20%;
+    }
+    .meBody{
+        flex-direction: column;
+    }
+    .columnizeMe{
+        justify-content: center;
+        align-items: center;
+    }
+    .columnizeMe .navText{
+        background:teal;
+        margin-bottom:4%;
+        padding:1%;
+    }
+    .columnizeMe .navText a{
+        color:white;
+    }
 }
