--- a/style/index.css
+++ b/style/index.css
@@ -267,6 +267,9 @@ h2{
     .meBody{
         flex-direction: column;
     }
+    .meBody img{
+        margin:4%;
+    }
     .columnizeMe{
         justify-content: center;
         align-items: center;
@@ -278,5 +281,26 @@ h2{
     }
     .columnizeMe .navText a{
         color:white;
+    }
+    .gallery{
+        flex-direction: row wrap;
+    }
+    .gallery .image{
+        width:40%;
+    }
+    .gallery a{
+        font-size: 2rem;
+        text-shadow:1px 1px black;
+        display:inline-block;
+        padding-left:10%;
+    }
+    .checkmeout{
+        flex-direction: column;
+        height:30vh;
+    }
+    .checkmeout .navText{
+        justify-content: center;
+        align-items: center;
+        padding:1% 15%;
     }
 }
