--- a/style/index.css
+++ b/style/index.css
@@ -80,6 +80,7 @@ h1{
     font-size:6rem;
     color:white;
     padding-left:2%;
+    font-family: 'Times New Roman';
 }
 .navBar{
     display:flex;
@@ -129,11 +130,43 @@ h2{
     display:flex;
     flex-flow:column wrap;
     padding-left:5%;
-    justify-content:space-evenly;
+    justify-content: space-evenly;
 }
 .columnizeMe p{
-    width:60%;
+    width: 60%;
     padding-bottom:2%;
+}
+.mediaLinks{
+    display: flex;
+}
+.twitLink{
+    display:flex;
+}
+.mediaImg img{
+    width:5%;
+    padding-left:1%;
+    padding-top:.4%;
+}
+.twitImg img{
+    width:11%;
+    padding-left:1.5%;
+}
+.aboutMe{
+    display:flex;
+    flex-flow:column wrap;
+    justify-content: flex-start;
+    padding-left:5%;
+}
+.aboutMe h2{
+    padding-top:15%;
+}
+.aboutMe h4{
+    padding-top:3%;
+}
+.aboutMe p{
+    width:70%;
+    padding-bottom:2%;
+    padding-top:10%;
 }
 .columnizeMe .navText{
     background:white;
@@ -180,7 +213,7 @@ h2{
     padding:3% 5%;
 }
 .image:hover{
-    border:7px solid blue;
+    border:7px solid teal;
 }
 .image:hover a{
     opacity:1;
